--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -7,6 +7,9 @@
   box-shadow: 0 2px 1px #ccc;
   margin: auto;
   padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .OrderButton {
@@ -37,6 +40,13 @@
 
 .OrderButton:not(:disabled) {
   animation: enable 0.3s linear;
+}
+
+
+@media (min-width: 500px) {
+  .BuildControls {
+    position: relative;
+  }
 }
 
 @keyframes enable {
